5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1836_2602.log
== SUBMITION (2019-06-22 16:01:33) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([2,1,4],[1,2,0],[2,3,2])
preco=dot(inv(b),a)
print("estafilococo",round(preco[0],1))
print("salmonela",round(preco[1],1))
print("coli",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.13304
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 6, in <module>
    b=array([2,1,4],[1,2,0],[2,3,2])
ValueError: only 2 non-keyword arguments accepted

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:01:43) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([2,1,4],[1,2,0],[2,3,2])
preco=dot(inv(b),a)
print("estafilococo",round(preco[0],1))
print("salmonela",round(preco[1],1))
print("coli",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:02:59) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo",round(preco[0],1))
print("salmonela",round(preco[1],1))
print("coli",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:03:22) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo",round(preco[0],1))
print("salmonela",round(preco[1],1))
print("coli",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.958167
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo 1923.4
salmonela 1864.5
coli -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo -31711.0
salmonela 16783.4
coli 12183.6
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo 22647.2
salmonela -9717.3
coli -6745.3
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:03:33) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo",round(preco[0],1))
print("salmonela",round(preco[1],1))
print("coli",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.957777
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo 1923.4
salmonela 1864.5
coli -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo -31711.0
salmonela 16783.4
coli 12183.6
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo 22647.2
salmonela -9717.3
coli -6745.3
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:03:36) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo",round(preco[0],1))
print("salmonela",round(preco[1],1))
print("coli",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:05:08) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo:",round(preco[0],1))
print("salmonela:",round(preco[1],1))
print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.0366
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:05:27) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo:",round(preco[0],1))
print("salmonela:",round(preco[1],1))
print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:07:17) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo:",round(preco[0],1))
print("salmonela:",round(preco[1],1))
print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:08:48) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo:",round(preco[0],1))
print("salmonela:",round(preco[1],1))
print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:15:11) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
if(preco[0]>0):
	print("estafilococo:",round(preco[0],1))
else:
	print(0)
if(preco[1]>0):	
	print("salmonela:",round(preco[1],1))
else:
	print(0)
if(preco[2]>0):
	print("coli:",round(preco[2],1))
else:
	print(0)
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.31157
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
0
salmonela: 16783.4
coli: 12183.6
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
0
0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:15:19) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
if(preco[0]>0):
	print("estafilococo:",round(preco[0],1))
else:
	print(0)
if(preco[1]>0):	
	print("salmonela:",round(preco[1],1))
else:
	print(0)
if(preco[2]>0):
	print("coli:",round(preco[2],1))
else:
	print(0)
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:15:56) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
if(preco[0]>0):
	print("estafilococo:",round(preco[0],1))
else:
	print(0)
if(preco[1]>0):	
	print("salmonela:",round(preco[1],1))
else:
	print(0)
if(preco[2]>0):
	print("coli:",round(preco[2],1))
else:
	print(0)
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:16:24) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
if(preco[0]>0):
	print("estafilococo:",round(preco[0],1))
else:
	print(0)
if(preco[1]>0):	
	print("salmonela:",round(preco[1],1))
else:
	print(0)
if(preco[2]>0):
	print("coli:",round(preco[2],1))
else:
	print(0)
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:16:31) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
if(preco[0]>0):
	print("estafilococo:",round(preco[0],1))
else:
	print(0)
if(preco[1]>0):	
	print("salmonela:",round(preco[1],1))
else:
	print(0)
if(preco[2]>0):
	print("coli:",round(preco[2],1))
else:
	print(0)
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.12014
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
0
salmonela: 16783.4
coli: 12183.6
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
0
0
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:17:35) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
	print("estafilococo:",round(preco[0],1))
	print("salmonela:",round(preco[1],1))
	print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.642768
-- ERROR:
  File "/home/codebench/codes/1836/2602/main.py", line 8
    print("estafilococo:",round(preco[0],1))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:17:58) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
	print("estafilococo:",round(preco[0],1))
	print("salmonela:",round(preco[1],1))
	print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.743422
-- ERROR:
  File "/home/codebench/codes/1836/2602/main.py", line 8
    print("estafilococo:",round(preco[0],1))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:18:10) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
	print("estafilococo:",round(preco[0],1))
	print("salmonela:",round(preco[1],1))
	print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
File "XXXX", line 8
    print("estafilococo:",round(preco[0],1))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:18:34) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo:",round(preco[0],1))
print("salmonela:",round(preco[1],1))
print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:18:42) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo:",round(preco[0],1))
print("salmonela:",round(preco[1],1))
print("coli:",round(preco[2],1))
if(preco[0==min(preco)]):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.998378
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:21:53) 
-- CODE:
from numpy import*
from numpy.linalg import *

a=array(eval(input()))
a=a.T
b=array([[2,1,4],[1,2,0],[2,3,2]])
preco=dot(inv(b),a)
print("estafilococo:",round(preco[0],1))
print("salmonela:",round(preco[1],1))
print("coli:",round(preco[2],1))
if(preco[0]==min(preco)):
	print("estafilococo")
elif(preco[1]==min(preco)):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.932807
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
